--- a/공공빅데이터 api 데이터 추출.ipynb
+++ b/공공빅데이터 api 데이터 추출.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-06T07:44:13.779218Z",
+     "start_time": "2021-10-06T07:44:13.437505Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import urllib.request\n",
@@ -16,8 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-06T07:47:13.564272Z",
+     "start_time": "2021-10-06T07:47:11.278217Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def certificate_one_page_data(page_num):\n",
+    "    url =f\"http://apis.data.go.kr/B490007/qualAcquPtcond/getQualAcquPtcond?serviceKey=7fh9W60z5J0r%2BM%2FuoKIeOq9W4VCJuQ69uE%2BAzEkLNKmxTnRWeuPnOPB%2BxuaEhu6vFG3VVcoWRLu6QtdWrmn4wA%3D%3D&numOfRows=50&pageNo={page_num}&dataFormat=json&acquYy=2017&qualgbCd=T\"\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    json_str = response.read().decode(\"utf-8\")\n",
+    "\n",
+    "    json_object = json.loads(json_str)\n",
+    "    json_object\n",
+    "\n",
+    "    body = [json_object['body']['items']]\n",
+    "\n",
+    "    df = json_normalize(json_object['body']['items'])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -61,307 +94,91 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>2017</td>\n",
-       "      <td>12</td>\n",
+       "      <td>01</td>\n",
        "      <td>T</td>\n",
        "      <td>국가기술자격</td>\n",
-       "      <td>017</td>\n",
-       "      <td>세종</td>\n",
-       "      <td>6</td>\n",
-       "      <td>60대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7875</td>\n",
-       "      <td>지게차운전기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
+       "      <td>001</td>\n",
+       "      <td>서울</td>\n",
        "      <td>1</td>\n",
        "      <td>10대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6042</td>\n",
-       "      <td>기계가공조립기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7914</td>\n",
-       "      <td>복어조리기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6837</td>\n",
-       "      <td>설비보전기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6223</td>\n",
-       "      <td>용접기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>03</td>\n",
-       "      <td>기사</td>\n",
-       "      <td>2121</td>\n",
-       "      <td>위험물산업기사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6335</td>\n",
-       "      <td>가스기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7130</td>\n",
-       "      <td>건축목공기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6223</td>\n",
-       "      <td>용접기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6697</td>\n",
-       "      <td>위험물기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6281</td>\n",
-       "      <td>자동차정비기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>6921</td>\n",
-       "      <td>정보처리기능사</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7875</td>\n",
-       "      <td>지게차운전기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7474</td>\n",
-       "      <td>침투비파괴검사기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>3</td>\n",
-       "      <td>30대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
-       "      <td>04</td>\n",
-       "      <td>기능사</td>\n",
-       "      <td>7180</td>\n",
-       "      <td>도배기능사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>4</td>\n",
-       "      <td>40대</td>\n",
        "      <td>F</td>\n",
        "      <td>여성</td>\n",
-       "      <td>03</td>\n",
-       "      <td>기사</td>\n",
-       "      <td>2562</td>\n",
-       "      <td>식물보호산업기사</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>12</td>\n",
-       "      <td>T</td>\n",
-       "      <td>국가기술자격</td>\n",
-       "      <td>999</td>\n",
-       "      <td>지역미상</td>\n",
-       "      <td>5</td>\n",
-       "      <td>50대</td>\n",
-       "      <td>M</td>\n",
-       "      <td>남성</td>\n",
        "      <td>04</td>\n",
        "      <td>기능사</td>\n",
-       "      <td>7866</td>\n",
-       "      <td>로더운전기능사</td>\n",
+       "      <td>7937</td>\n",
+       "      <td>미용사(일반)</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>01</td>\n",
+       "      <td>T</td>\n",
+       "      <td>국가기술자격</td>\n",
+       "      <td>001</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>여성</td>\n",
+       "      <td>04</td>\n",
+       "      <td>기능사</td>\n",
+       "      <td>7947</td>\n",
+       "      <td>미용사(피부)</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>01</td>\n",
+       "      <td>T</td>\n",
+       "      <td>국가기술자격</td>\n",
+       "      <td>001</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>여성</td>\n",
+       "      <td>04</td>\n",
+       "      <td>기능사</td>\n",
+       "      <td>7911</td>\n",
+       "      <td>양식조리기능사</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>01</td>\n",
+       "      <td>T</td>\n",
+       "      <td>국가기술자격</td>\n",
+       "      <td>001</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>여성</td>\n",
+       "      <td>04</td>\n",
+       "      <td>기능사</td>\n",
+       "      <td>7912</td>\n",
+       "      <td>일식조리기능사</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>01</td>\n",
+       "      <td>T</td>\n",
+       "      <td>국가기술자격</td>\n",
+       "      <td>001</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10대</td>\n",
+       "      <td>F</td>\n",
+       "      <td>여성</td>\n",
+       "      <td>04</td>\n",
+       "      <td>기능사</td>\n",
+       "      <td>6892</td>\n",
+       "      <td>정보기기운용기능사</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -369,70 +186,56 @@
        "</div>"
       ],
       "text/plain": [
-       "   acquYy acquMm qualgbCd qualgbNm rgnCd rgnNm ageGrupCd ageGrupNm genderCd  \\\n",
-       "0    2017     12        T   국가기술자격   017    세종         6       60대        M   \n",
-       "1    2017     12        T   국가기술자격   999  지역미상         1       10대        M   \n",
-       "2    2017     12        T   국가기술자격   999  지역미상         1       10대        M   \n",
-       "3    2017     12        T   국가기술자격   999  지역미상         1       10대        M   \n",
-       "4    2017     12        T   국가기술자격   999  지역미상         1       10대        M   \n",
-       "5    2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "6    2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "7    2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "8    2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "9    2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "10   2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "11   2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "12   2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "13   2017     12        T   국가기술자격   999  지역미상         2       20대        M   \n",
-       "14   2017     12        T   국가기술자격   999  지역미상         3       30대        M   \n",
-       "15   2017     12        T   국가기술자격   999  지역미상         4       40대        F   \n",
-       "16   2017     12        T   국가기술자격   999  지역미상         5       50대        M   \n",
+       "  acquYy acquMm qualgbCd qualgbNm rgnCd rgnNm ageGrupCd ageGrupNm genderCd  \\\n",
+       "0   2017     01        T   국가기술자격   001    서울         1       10대        F   \n",
+       "1   2017     01        T   국가기술자격   001    서울         1       10대        F   \n",
+       "2   2017     01        T   국가기술자격   001    서울         1       10대        F   \n",
+       "3   2017     01        T   국가기술자격   001    서울         1       10대        F   \n",
+       "4   2017     01        T   국가기술자격   001    서울         1       10대        F   \n",
        "\n",
-       "   genderNm seriesCd seriesNm  jmCd        jmNm  acquCnt  \n",
-       "0        남성       04      기능사  7875    지게차운전기능사        1  \n",
-       "1        남성       04      기능사  6042   기계가공조립기능사        1  \n",
-       "2        남성       04      기능사  7914     복어조리기능사        1  \n",
-       "3        남성       04      기능사  6837     설비보전기능사        1  \n",
-       "4        남성       04      기능사  6223       용접기능사        1  \n",
-       "5        남성       03       기사  2121     위험물산업기사        1  \n",
-       "6        남성       04      기능사  6335       가스기능사        1  \n",
-       "7        남성       04      기능사  7130     건축목공기능사        1  \n",
-       "8        남성       04      기능사  6223       용접기능사        1  \n",
-       "9        남성       04      기능사  6697      위험물기능사        1  \n",
-       "10       남성       04      기능사  6281    자동차정비기능사        1  \n",
-       "11       남성       04      기능사  6921     정보처리기능사        2  \n",
-       "12       남성       04      기능사  7875    지게차운전기능사        1  \n",
-       "13       남성       04      기능사  7474  침투비파괴검사기능사        1  \n",
-       "14       남성       04      기능사  7180       도배기능사        1  \n",
-       "15       여성       03       기사  2562    식물보호산업기사        1  \n",
-       "16       남성       04      기능사  7866     로더운전기능사        1  "
+       "  genderNm seriesCd seriesNm  jmCd       jmNm  acquCnt  \n",
+       "0       여성       04      기능사  7937    미용사(일반)       14  \n",
+       "1       여성       04      기능사  7947    미용사(피부)        7  \n",
+       "2       여성       04      기능사  7911    양식조리기능사        9  \n",
+       "3       여성       04      기능사  7912    일식조리기능사        5  \n",
+       "4       여성       04      기능사  6892  정보기기운용기능사        1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    url =\"http://apis.data.go.kr/B490007/qualAcquPtcond/getQualAcquPtcond?serviceKey=7fh9W60z5J0r%2BM%2FuoKIeOq9W4VCJuQ69uE%2BAzEkLNKmxTnRWeuPnOPB%2BxuaEhu6vFG3VVcoWRLu6QtdWrmn4wA%3D%3D&numOfRows=50&pageNo=1230&dataFormat=json&acquYy=2017&qualgbCd=T\"\n",
-    "    response = urllib.request.urlopen(url)\n",
-    "    json_str = response.read().decode(\"utf-8\")\n",
-    "\n",
-    "    json_object = json.loads(json_str)\n",
-    "    json_object\n",
-    "\n",
-    "    body = [json_object['body']['items']]\n",
-    "\n",
-    "    df = json_normalize(json_object['body']['items'])\n",
-    "    df"
+    "certificate_one_page_data(1).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "from tqdm import trange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def certificate_all_page_data(start_page, end_page):\n",
+    "    page_list = []\n",
+    "    for page_num in trange(start_page, end_page):\n",
+    "        one_page = certificate_one_page_data(page_num)\n",
+    "        if len(one_page) >0 :\n",
+    "            page_list.append(one_page)\n",
+    "        else :\n",
+    "            return page_list\n",
+    "    return page_list"
+   ]
   }
  ],
  "metadata": {
